Añadir estructura básica de contacto con imagen de marcador de posición

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <div class="container">
+        <div class="contactos">
+            <div class="contacto">
+                <div class="contacto-info">
+                    <div class="contacto-info-img">
+                        <img src="https://via.placeholder.com/150" alt="Contacto">
+                    </div>
+                    <div class="contacto-info-nombre">
+                        <h3>Nombre</h3>
+                    </div>
+                    
+
+                </div>
+            </div>
+        </div>
 
 </body>
 </html>
