--- a/index.html
+++ b/index.html
@@ -3,26 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>ChatsApp</title>
+    <title>Mensajeria - Contact Me</title>
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="contactos">
-            <div class="contacto">
-                <div class="contacto-info">
-                    <div class="contacto-info-img">
-                        <img src="https://via.placeholder.com/150" alt="Contacto">
+            <div class="estado-usuario">
+                <div class="datos-usuario">
+                    <img src="assets/imgs/maria.jpg" alt="profile">
+                    <div class="datos-usuario-item">
+                        <span><b>Maria</b></span>
+                        <span class="estado">Activa Ahora</span>
                     </div>
-                    <div class="contacto-info-nombre">
-                        <h3>Nombre</h3>
-                    </div>
-                    
-
+                </div>
+                <div class="options">
+                    <i class="fa-regular fa-message"></i>
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>
+            <hr>
+            <div class="nuevo-chat-container">
+                <div class="nuevo-chat">
+                    <button>Nuevo Chat</button>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Juanita</span>
+                    <span class="last-message">Hola, ¿como estas?</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Alberta</span>
+                    <span class="last-message">ipsum dolor sit</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Ignacio</span>
+                    <span class="last-message">Lorem ipsum dolor sit </span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Diego</span>
+                    <span class="last-message">amet consectetur adipisicing</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Fernando</span>
+                    <span class="last-message"> elit. Quo possimus n</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Pedro</span>
+                    <span class="last-message">am vel ipsum facere, officiis d</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Hugo</span>
+                    <span class="last-message">amet consectetur adipisicing</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/imgs/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="chat">
+                <div class="chat-item">
+                    <span>Francisca</span>
+                    <span class="last-message">elit. Quo possimus nam</span>
                 </div>
             </div>
         </div>
 
+
+
+
+
+
+
+        <div class="principal">
+            <img src="assets/imgs/hand.png" alt="principal">
+            <h1 class="title">Comienza el Networking</h1>
+            <p class="description">Presiona el botón <b>"Nuevo Chat"</b> para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento.</p>
+        </div>
+    </div>
 </body>
 </html>
